--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "async": "~0.2.9",
-    "dbus": "^0.2.17",
-    "debug": "^2.1.1"
+    "async": "2.1.4",
+    "dbus": "0.2.20",
+    "debug": "2.6.1"
   },
   "main": "./lib/connman"
 }
