--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "async": "2.1.4",
-    "dbus": "0.2.20",
-    "debug": "2.6.1"
+    "async": "^3.1.1",
+    "dbus": "^1.0.6",
+    "debug": "^4.1.1"
   },
   "main": "./lib/connman"
 }
